--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,9 @@ body {
 .books__container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .book__box {
@@ -106,30 +108,34 @@ body {
   box-shadow: 2px 2px 20px rgba(194, 194, 194, 0.5);
   list-style-type: none;
   margin: 10px;
-  padding: 15px;
+  padding: 10px;
   /* min-width: 270px; */
-  width: 300px;
+  width: 280px;
   height: auto;
 }
 
 .book__header {
   display: block;
   justify-content: space-between;
-  margin: 15px 0;
+  margin: 10px 0;
   width: 100%;
 }
 
 .heading--secondary {
-  font-size: 22px;
+  font-size: 18px;
   margin: 5px;
 }
 
 .book__body {
   display: flex;
   flex-wrap: nowrap;
-  margin: 15px 0;
+  margin: 10px 5px;
   align-items: center;
   height: auto;
+}
+
+.book__body--detail {
+  font-size: 15px;
 }
 
 .book__image-container {
